--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "zara-playwright-tests",
   "version": "1.0.0",
   "main": "index.js",
-  
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "test:ui": "npx playwright test --ui",
+    "test:headed": "npx playwright test --headed",
+    "test:report": "npx playwright show-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Playwright tests for Zara project",
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.3"
