--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,6 +26,13 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      - name: Restore zara-cookies-only.json from secret
+        run: |
+          mkdir -p storage
+          echo "$ZARA_COOKIES_BASE64" | base64 --decode > storage/zara-cookies-only.json
+        env:
+          ZARA_COOKIES_BASE64: ${{ secrets.ZARA_COOKIES_BASE64 }}
+
       - name: Run Playwright tests
         run: npx playwright test
 
