--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ coverage/
 # ====================
 *.orig
 *.rej
+
+# ====================
 # Auth and cookies files
-zara-auth.json
-zara-cookies.json
+# ====================
+zara-cookies-only.json
