--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
-name: Run Playwright Tests with Stealth
+name: Run Playwright Tests with Stealth 
 
 on:
   push:
     branches:
-      - main  
+      - main
   pull_request:
 
 jobs:
@@ -38,3 +38,10 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
+
+      - name: Upload screenshots on failure
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshots
+          path: test-results/**/*.png
