--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Run Playwright Tests with Stealth 
+name: Run Playwright Tests with Stealth
 
 on:
   push:
@@ -32,16 +32,31 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test
 
-      - name: Upload test artifacts on failure
-        if: failure()
+      - name: Upload Playwright HTML report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 14
 
-      - name: Upload screenshots on failure
+      - name: Upload trace files
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: traces
+          path: test-results/**/*.zip
+
+      - name: Upload screenshots
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: screenshots
           path: test-results/**/*.png
+
+      - name: Upload videos
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: videos
+          path: test-results/**/*.webm
